@@ -1,3 +1,10 @@
+.413
+  - Version bump of developer release
+
+.412_01
+  - Wrap quotes around args to looks_like_number. This is a shot in
+    the dark to fix stuff found by cpan testers
+
 .412
   - Minor decruft and "mostly still works" release
   - Don't warn about memcached if memcachedHosts is undef in the rc
